# CardGrab

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: NOTARIZATION.md
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: camera.rs  commands.rs  db.rs  device.rs  error.rs  journal.rs  lib.rs  main.rs  scanner.rs  settings.rs  state.rs  template.rs  thumbs.rs  transfer.rs
src/lib/: api.ts  format.ts  stores.ts
src/lib/components/: Button.svelte  CardPanel.svelte  EmptyState.svelte  HistoryView.svelte  Icon.svelte  ImportDetail.svelte  ImportSetup.svelte  ProgressView.svelte  SettingsView.svelte  Sidebar.svelte  StatChip.svelte  Thumb.svelte
