[package]
name = "cardgrab"
version = "0.1.0"
description = "Fast, complete SD card ingest with Google Drive backup"
authors = ["Tejas Agrawal"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "cardgrab_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "macos-private-api"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
walkdir = "2"
kamadak-exif = "0.5"
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
filetime = "0.2"
uuid = { version = "1", features = ["v4", "serde"] }
once_cell = "1"
dirs = "5"
parking_lot = "0.12"

[features]
custom-protocol = ["tauri/custom-protocol"]
